Set container secure computing mode to unconfined.
* https://github.com/derekparker/delve/issues/515#issuecomment-214911481
* https://docs.docker.com/engine/security/seccomp/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,7 @@ services:
         image: arris/secql
         ports: 
             - "3000:3000"
+        security_opt:
+            - seccomp:unconfined
         volumes:
             - ${PROJECT_DIR}:/opt/code/src/${PROJECT_NS}
