--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.2'
 services:
-    ide:
+    dev:
         build: 
             context: .
             args:
@@ -14,10 +14,26 @@ services:
                 PROJECT_NAME: ${PROJECT_NAME}
                 USER_PWD: ${USER_PWD}
                 ROOT_PWD: ${ROOT_PWD}
+        container_name: dev
         image: arris/secql
+        links:
+            - db
         ports: 
             - "3000:3000"
         security_opt:
             - seccomp:unconfined
         volumes:
             - ${PROJECT_DIR}:/opt/code/src/${PROJECT_NS}
+    db:
+        image: mysql:8
+        container_name: db
+        ports:
+            - 3306:3306
+        environment:
+            MYSQL_DATABASE: "secdb"
+            MYSQL_USER: "admin"
+            MYSQL_PASSWORD: "admin"
+            MYSQL_ROOT_PASSWORD: "root"
+        volumes:
+            - ./data:/var/lib/mysql
+
